qmljs: correct slot name for properties starting with “_”

Task-number: QTCREATORBUG-12214
Change-Id: Ie8009846ce27d4acbc3e9ad4dd7dda73fde39413
Reviewed-by: Kai Koehne <kai.koehne@digia.com>